--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
 body{
     margin: 0;
     font-family: "Josefin Sans", sans-serif;
+    background: url(images/bg-pattern-desktop.svg);
+    background-size: contain;
+
 }
 /* INPUT AREA */
 .input-bar{
@@ -23,7 +26,7 @@ body{
     border: hidden;
     font-family: 'Josefin Sans', sans-serif;
     background: transparent;
-    font-size: 1.25rem;
+    font-size: 0.75em;
     color: RGB(209,163,165);
 }
 .input-bar > input::placeholder{ color: RGB(209,163,165)}
@@ -48,12 +51,15 @@ button:hover{
     transform: scale(1.1);
     box-shadow: 0 0.5rem 10px rgba(0,0,0,0.3);
 }
-#error {
+#error-msg {
     color: RGB(249,100,100);
     position: absolute;
-    top: 120%;
+    top: 110%;
+    left: 5%;
+    font-size: 0.75em;
 }
 #error-icon {
+    visibility: hidden;
     position: absolute;
     top: 50%;
     right: 22%;
@@ -62,43 +68,42 @@ button:hover{
 }
 
 .container{
-    display: flex;
-    justify-content: space-between;
-    height: 100vh;
-}
-.item-left{
-    /* border: 1px solid black; */
-    background: url(images/bg-pattern-desktop.svg);
-    background-size: cover;
     padding-left: 15%;
-    flex: 1 1 50vw;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 20% 80%;
+    grid-template-areas: 
+    "logo image"
+    "text image";
 }
 .logo {
-    height: 20%;
     position: relative;
-}
-.logo img {
-    position: absolute;
-    top: 50%;
-    left: 0;
-    transform: translateY(-50%);
-}
-
-.item-right{
-    /* border: 1px solid black; */
-    flex: 0 1 40vw;
+    grid-area: logo;
     height: 100%;
+    min-height: 10vh;
+    width: 100%;
+    /* background: red; */
 }
 .image {
+    grid-area: image;
     width: 100%;
     height: 100%;
     overflow: hidden;
+}
+.text{
+    grid-area: text;
+}
+.logo > img {
+    position: absolute;
+    top: 30%;
 }
 .image img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
+
 
 /* item-left TEXT styling */
 .text> h1{
@@ -118,38 +123,47 @@ button:hover{
     width: 70%;
     max-width: 45ch;
     font-size: clamp(0.9rem, 1.1vw ,1.5rem);
-    line-height: 1.7rem;
+    line-height:1.7rem;
 }
-.text{
-    margin-bottom: 3rem;
+.input-bar{
+    margin-top: 4rem;
 }
 
 
 @media only screen and (max-width: 768px) {
+    .container{
+        padding-left: 0;
+        height: 100vh;
+    }
     .item-left{
         padding-left: 0;
     }
     .container{
-        display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: auto;
         grid-template-areas: 
         "logo" 
-        "imag" 
+        "image" 
         "text" 
-        "input";
     }
-    .logo{
-        grid-area: logo;
+    .logo > img {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%) scale(0.75);
+    }
+    .text > p {
+        width: 100%;
+        max-width: none;
     }
     .text{
-        grid-area: text;
-    }
-    .item-right{
-        grid-area: imag;
+        padding: 2rem 2rem;
+        text-align: center;
     }
     .input-bar{
-        grid-area: input;
+        margin: 0 auto;
+        margin-top: 2rem;
+        width: 85%;
+        height: 0.75rem;
+        padding: 1.125rem;
     }
-
 }
